# ArXiv-Library-releases

./: BUILD.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md
docs/screenshots/: upload.txt
source-code/: BUILD-WINDOWS.bat  build-linux.sh  build-mac-clean.sh  build-windows.ps1
source-code/src/: index.html  main.js  styles.css
source-code/src-tauri/: Cargo.toml  tauri.conf.json
source-code/src-tauri/capabilities/: default.json
source-code/src-tauri/icons/: icon.icns
source-code/src-tauri/src/: arxiv.rs  crossref.rs  db.rs  downloader.rs  lib.rs  main.rs  semantic.rs  settings.rs
