[package]
name = "arxiv-library"
version = "1.0.0"
description = "An arXiv-native research library"
authors = ["Pankaj Sharma"]
edition = "2021"

[lib]
name = "arxiv_library_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
quick-xml = "0.36"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
once_cell = "1"
